--- a/Pages/FetchData.razor
+++ b/Pages/FetchData.razor
@@ -2,8 +2,7 @@
 @inject HttpClient Http
 
 <PageTitle>Weather forecast</PageTitle>
-
-<h1>Weather forecast</h1>
+<ModuleTitle Title="Weather forecast"/>
 
 <p>This component demonstrates fetching data from the server.</p>
 
