--- a/_Imports.razor
+++ b/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using CursoBlazorWebAssembly
 @using CursoBlazorWebAssembly.Shared
+@using Blazored.Toast
+@using Blazored.Toast.Services
+@using Blazored.Toast.Configuration
