--- a/Pages/Products/Products.razor
+++ b/Pages/Products/Products.razor
@@ -4,6 +4,9 @@
 @using CursoBlazorWebAssembly.Service
 @inject IProductService productService;
 @inject NavigationManager navigationManager
+@inject IJSRuntime IJSRuntime
+@inject IToastService toastService
+
 
 
 <PageTitle>Products</PageTitle>
@@ -21,6 +24,7 @@
                 <div class="card-body">
                     <h4><b>@product.Title</b></h4>
                     <p>@product.Price?.ToString("C")</p>
+                    <button title="Eliminar" class="btn btn-danger btn-delete" onclick="@(()=>DeleteProduct(product))"><span class="oi oi-trash"></span></button>
                 </div>
             </div>
         }
@@ -33,16 +37,28 @@ else
 
 @code {
     //
-    //                <button title="Eliminar" class="btn btn-danger btn-delete" onclick="@(()=>Delete(product))"><span class="oi oi-trash"></span></button>
+    //                
     private List<Product> products;
 
     protected override async Task OnInitializedAsync()
     {
-        products = await GetProducts();
+        await GetProducts();
     }
 
-    private async Task<List<Product>> GetProducts()
+    private async Task GetProducts()
     {
-        return await productService.GetProducts(); 
+        products = await productService.GetProducts();
+    }
+
+    private async Task DeleteProduct(Product product)
+    {
+        if (!await IJSRuntime.InvokeAsync<bool>("confirm",$"remove {product.Title} ?"))
+        {
+            return;
+        }
+        await productService.DeleteProducts(product.Id);
+        toastService.ShowSuccess("product delete");
+        await GetProducts();
+        StateHasChanged();
     }
 }
